# codeql

.github/workflows/: swift.yml
java/kotlin-extractor/src/main/kotlin/: KotlinFileExtractor.kt  KotlinUsesExtractor.kt
swift/: schema.py
swift/actions/run-ql-tests/: action.yml
swift/extractor/: main.cpp
swift/extractor/remapping/: BUILD.bazel  SwiftFileInterception.cpp  SwiftFileInterception.h
swift/ql/: .generated.list
swift/ql/lib/: swift.dbscheme
swift/tools/: qltest.sh
