load("//swift:rules.bzl", "swift_cc_library")

swift_cc_library(
    name = "remapping",
    srcs = glob(["*.cpp"]),
    hdrs = glob(["*.h"]),
    local_defines = select({
        "@platforms//os:macos": ["SHARED_LIBC=libc.dylib"],
        "@platforms//os:linux": ["SHARED_LIBC=libc.so.6"],
    }),
    visibility = ["//swift:__subpackages__"],
    deps = [
        "//swift/extractor/config",
        "//swift/extractor/infra/file",
        "//swift/third_party/swift-llvm-support",
    ],
)
